<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" android:orientation="vertical">

    <TextView android:text="@string/welcom_auth_msg" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="18dp" android:gravity="center_horizontal"
        android:id="@+id/tester_auth"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_edit_text"
        android:text="@string/login_text"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password_edit_text"
        android:text="@string/pass_text"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auth_button"
        android:layout_marginTop="30dp"
        android:text="@string/auth_button_text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/del_button"
        android:layout_marginTop="30dp"
        android:text="@string/del_button_text"/>
</LinearLayout>